# subsequences

./: .flake8  .gitignore  README.md  build.py  pyproject.toml  tasks.py
.github/workflows/: ci.yaml  publish.yaml
src/subsequences/: substrings.py
tests/: test_subsequences.py
