[tool.poetry]
name = "subsequences"
version = "0.1.1"
description = "Tools for checking for subsequences and substrings"
authors = ["Davis Kirkendall <davis.e.kirkendall@gmail.com>"]
include = [
   {path = "src/**/*.so", format = "wheel"},
   {path = "src/**/*.pyd", format = "wheel"},
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Cython = "^0.29.23"
black = "^20.8b1"
isort = "^5.8.0"
mypy = "^0.812"
flake8 = "^3.9.1"
ipython = "^7.22.0"
pdbpp = "^0.10.2"
click = "^7.1.2"
coverage = "^5.5"
numpy = "^1.20.2"

[tool.poetry.build]
generate-setup-file = false  # build.py handles the distribution itself
script = "build.py"

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
force_grid_wrap=0
use_parentheses=true

[tool.pytest.ini_options]
junit_family="xunit2"

[tool.coverage.run]
plugins = ["Cython.Coverage"]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "import cython"]
